--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-  {
+{
   "name": "proyectosoftware",
   "version": "1.0.0",
   "main": "Back/server.js",
@@ -21,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "selenium-webdriver": "^4.23.0"
   }
 }
