--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
-  {
+{
   "name": "proyectosoftware",
   "version": "1.0.0",
   "main": "Back/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node Back/server.js"
   },
   "repository": {
@@ -22,5 +22,9 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "jsdom": "^24.1.1"
   }
 }
