--- a/Back/.env
+++ b/Back/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=mysql://root:ArvsjUfSJYLGeRfsLLGRrbnKfvUfgjbI@mysql.railway.internal:3306/railway
+DATABASE_URL=mysql://root:ArvsjUfSJYLGeRfsLLGRrbnKfvUfgjbI@viaduct.proxy.rlwy.net:19751/railway
