develop esta al mismo nivel que main pero tiene los archivos de la interfaz desarrollados por jimena

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "proyectosoftware",
   "version": "1.0.0",
   "main": "Back/server.js",
+  "type": "module",
   "scripts": {
     "test": "jest",
     "start": "node Back/server.js"
