--- a/moneyMateTests/package.json
+++ b/moneyMateTests/package.json
@@ -1,24 +1,30 @@
 {
-  "name": "moneymatetests",
+  "name": "proyectosoftware",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "chromedriver": "^126.0.5",
     "selenium-webdriver": "^4.23.0"
   },
-
-  "scripts": {
-    "start": "node app.js" // o el comando correcto para iniciar tu aplicación
+  "devDependencies": {
+    "jest": "^29.0.0",
+    "babel-jest": "^29.0.0",
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.21.0",
+    "supertest": "^6.0.0"
   },
-  "scripts": {
-    "test": "jest"
+  "jest": {
+    "transform": {
+      "^.+\\.(js|jsx)?$": "babel-jest"
+    }
   }
 }
-
