--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
     "mysql2": "^3.11.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
-    "jsdom": "^24.1.1"
+    "jsdom": "^24.1.1",
+    "selenium-webdriver": "^4.23.0",
+    "supertest": "^7.0.0"
   }
 }
