--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DATABASE_URL=mysql://root:ArvsjUfSJYLGeRfsLLGRrbnKfvUfgjbI@viaduct.proxy.rlwy.net:19751/railway
+DATABASE_URL=mysql://laurajaime:1057978182Laura@moneymate.mysql.database.azure.com:3306/moneymate?ssl-mode=require
+
 PORT=19751
