--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "mysql": "^2.18.1",
-    "mysql2": "^3.11.0"
+    "mysql2": "^3.11.5"
   },
   "devDependencies": {
     "jest": "^29.7.0",
