--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
-    "jsdom": "^24.1.1"
+    "jsdom": "^24.1.1",
+    "selenium-webdriver": "^4.27.0"
   }
 }
