de vuelta a lo mismo :/
5000 horas perdidas

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-DATABASE_URL=mysql://laurajaime:1057978182Laura@moneymate.mysql.database.azure.com:3306/moneymate?ssl-mode=require
-
+DATABASE_URL=mysql://root:ArvsjUfSJYLGeRfsLLGRrbnKfvUfgjbI@viaduct.proxy.rlwy.net:19751/railway
 PORT=19751
