--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "para que funcione el proyecto por ahora hay que tener una conexion con el nombre root y contraseña root, tambien hay que tener la base de datos creada en mysql con el nombre moneymate y la tabla dentro que se llame usuarios con los campos, nombre, correo, etc...,\r ademas una vez se clone hay que en la consola del proyecto instalar las dependencias con npm install, eso instala todo lo que se necesita, claramente primero hay que tener descargado en el equipo node.js \r y se ejecuta el proyecto desde consola con npm start, ademas se abre la pagina en localhost:3000 \r hay que sobreescribir desde develop sus ramas\"SOBREESCRIBIR\", no hacer merge",
   "bugs": {
     "url": "https://github.com/JuanCaLinux/ProyectoSoftware/issues"
   },
@@ -23,7 +23,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.2",
     "fs": "^0.0.1-security",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.5"
