--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=mysql://root:ArvsjUfSJYLGeRfsLLGRrbnKfvUfgjbI@viaduct.proxy.rlwy.net:19751/railway
+DATABASE_URL=mysql://root:oJDzfCxSFbOcQBmjCMcTnanBMcBnnkQN@junction.proxy.rlwy.net:40188/railway
 PORT=19751
